crates/oxc_react_compiler/tests/snapshots/propagate-scope-deps-hir-fork__ssa-renaming-ternary-destruction-with-mutation.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/propagate-scope-deps-hir-fork/ssa-renaming-ternary-destruction-with-mutation.js
---
// @enablePropagateDepsInHIR
import { mutate } from "shared-runtime";
function useFoo() {}
export const FIXTURE_ENTRYPOINT = {
	fn: useFoo,
	params: [{
		cond: false,
		foo: 2,
		bar: 55
	}],
	sequentialRenders: [
		{
			cond: false,
			foo: 2,
			bar: 55
		},
		{
			cond: false,
			foo: 3,
			bar: 55
		},
		{
			cond: true,
			foo: 3,
			bar: 55
		}
	]
};
