crates/oxc_react_compiler/tests/snapshots/propagate-scope-deps-hir-fork__ssa-renaming-ternary-with-mutation.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/propagate-scope-deps-hir-fork/ssa-renaming-ternary-with-mutation.js
---
import { c as _c } from "react/compiler-runtime";
// @enablePropagateDepsInHIR
import { mutate } from "shared-runtime";
function useFoo(props) {
	const $ = _c(4);
	let x;
	if ($[0] !== props.bar || $[1] !== props.cond || $[2] !== props.foo) {
		x = [];
		x.push(props.bar);
		props.cond ? (x = [], x.push(props.foo)) : null;
		mutate(x);
		$[0] = props.bar;
		$[1] = props.cond;
		$[2] = props.foo;
		$[3] = x;
	} else {
		x = $[3];
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: useFoo,
	params: [{
		cond: false,
		foo: 2,
		bar: 55
	}],
	sequentialRenders: [
		{
			cond: false,
			foo: 2,
			bar: 55
		},
		{
			cond: false,
			foo: 3,
			bar: 55
		},
		{
			cond: true,
			foo: 3,
			bar: 55
		}
	]
};
